--- a/Client/package.json
+++ b/Client/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.0",
+    "@tanstack/react-query": "^5.59.16",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "viem": "^2.21.35",
+    "wagmi": "^2.12.25"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
